compilador/test_programs/invalid/06_wrong_argument_count.patito
programa wrong_args;
vars:
    x: entero;

entero add(a: entero, b: entero) {
    return a + b;
};

inicio {
    x = add(5);
    escribe(x);
}
fin
